kdeutils (4:4.6.5-2) UNRELEASED; urgency=low

  [ José Manuel Santamaría Lema ]
  * Add kcalc_key_bindings.diff which reverts a faulty upstream commit
    which broke the key bindings in kcalc.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 19 Jul 2011 13:38:48 +0200

kdeutils (4:4.6.5-1) unstable; urgency=low

  * New upstream release:
    - ark now supports password-protected archives correctly (Closes: #451926)

  [ José Manuel Santamaría Lema ]
  * Bump build dependency on kde-sc-dev-latest to 4:4.6.5.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Jul 2011 21:54:01 +0300

kdeutils (4:4.6.3-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Lower kfloppy as suggest for the kdeutils metapackage, as it is no more
    worth than that, nowadays. (Closes: #623778)

  [ José Manuel Santamaría Lema ]
  * Bump build dependency on kde-sc-dev-latest to 4:4.6.3.
  * Bump Standards-Version to 3.9.2; no changes needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 May 2011 02:41:41 +0300

kdeutils (4:4.6.2-1) experimental; urgency=low

  * New upstream release:
    - fixes creation of DSA&ElGamal keys in kgpg (Closes: #597001)
  * Update installed files.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.
  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
  * Remove redundant links to deprecated common-licenses/BSD.
  * Fix grammar error in the kremotecontrol description.

  [ George Kiagiadakis ]
  * Add myself to uploaders.
  * Bump build dependencies on other kde-sc components to version 4:4.6.
  * Add new kremotecontrol package and make kdelirc a transitional package.
  * Remove unused build dependency on libsnmp-dev.
  * Add build dependency on python-dev, needed for superkaramba.
  * s/KDE/KDE SC/ in all package descriptions.

  [ José Manuel Santamaría Lema ]
  * Remove package okteta.
  * Add package filelight.